--- a/public/style.css
+++ b/public/style.css
@@ -1,48 +1,64 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap");
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
-body {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #fbf0df;
+:root {
+  --bg: #fbf0df;
+  --font: #000000;
 }
 
-.box {
-  width: 100%;
+body {
+  background-color: var(--bg);
+  font-family: "Open Sans", sans-serif;
+  color: var(--font);
+}
+
+.con {
+  position: absolute;
+  width: 700px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-top: 12rem;
+}
+
+.flex {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 3rem;
 }
 
-#logo {
+#logo-box {
+  position: relative;
+}
+
+#tom-nook {
   width: 5rem;
   height: 5rem;
-  margin-top: -2.5rem;
-  transition: transform 200ms ease-in-out;
+  margin-top: -2.3rem;
   position: absolute;
+  transition: transform 200ms ease-in-out;
   z-index: 1;
 }
 
-#logo:hover {
-  cursor: pointer;
-  transform: rotate(15deg);
-}
-
-#logo:hover + #qm {
-  transform: translateY(-3rem);
-}
-
 #qm {
+  position: absolute;
   width: 1.5rem;
   height: 1.5rem;
   margin-left: 1.7rem;
-  margin-top: -0.5rem;
-  position: absolute;
   transition: transform 200ms ease-in-out;
-  z-index: 0;
+  z-index: -1;
+}
+
+#tom-nook:hover {
+  cursor: pointer;
+  transform: rotate(10deg);
+}
+#tom-nook:hover + #qm {
+  transform: translateY(-3.5rem);
 }
 
 #theme-btn {
@@ -53,7 +69,7 @@ body {
   border: 3px solid rgba(128, 128, 128, 0.1);
   border-radius: 50%;
   background-color: gainsboro;
-  transition: all 0.1s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 #theme-btn:hover {
