--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,3 +1,7 @@
+body {
+  overflow: scroll !important;
+}
+
 #tn {
   transition: transform 200ms ease-in-out;
 }
@@ -13,4 +17,24 @@
 
 #tn:hover + #qm {
   transform: translateY(-3.3rem);
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  background-color: rgba(0, 0, 0, 0);
+  -webkit-border-radius: 100px;
+}
+
+::-webkit-scrollbar:hover {
+  background-color: rgba(0, 0, 0, 0.09);
+}
+
+::-webkit-scrollbar-thumb:vertical {
+  background: rgba(0, 0, 0, 0.5);
+  -webkit-border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb:vertical:active {
+  background: rgba(0, 0, 0, 0.61);
+  -webkit-border-radius: 100px;
 }
